@@ -15,7 +15,7 @@
 			</div>
 			<div id="options">
 				<p>Enter your options here.</p>
-				<form id="query" action="jsonquery.php" method="get">
+				<form id="query" action="jsonquery.html" method="get">
 					<table id="cgiform">
 						<tr>
 							<td class="label">
